fix grid alignment

--- a/css/components/_question-card.css
+++ b/css/components/_question-card.css
@@ -2,7 +2,8 @@
   display: grid;
   position: relative;
   margin: 20px auto;
-  grid-template-rows: 1fr 1fr 1fr 1fr;
+  /* grid-template-rows: 1fr 1fr 1fr; */
+  grid-row-gap: 1rem;
   align-items: center;
   justify-items: center;
   max-height: 70%;
@@ -16,7 +17,7 @@
 }
 
 .question__text {
-  padding: 10px;
+  padding-top: 30px;
   font-weight: 700;
 }
 
@@ -29,6 +30,7 @@
   display: flex;
   width: 80%;
   gap: 5px;
+  /* grid-row: 4; */
 }
 
 .question__hashtags--design {
